Fix bottom nav overflow bug

--- a/personal-website/src/styling/App.css
+++ b/personal-website/src/styling/App.css
@@ -44,6 +44,7 @@ a:hover {
   width: 70%;
   text-decoration: none;
   overflow: auto;
+  margin-right: 2%;
 }
 
 #name {
@@ -57,8 +58,7 @@ a:hover {
   float: right;
   display: inline;
   width: 20%;
-  padding: 1%;
-  overflow: 
+  padding: 1%; 
 }
 
 #contact-container {
